# simple-product-optimizer

./: .gitignore  Dockerfile  pyproject.toml
product_optimizer/: main.py
